🧭 Navegación y Exploración: Herramientas modernas de navegación
- eza: Listado de archivos con colores e iconos modernos
- tree: Visualización jerárquica de estructura de directorios
- ranger: Navegador de archivos interactivo con vista previa
- zoxide: Navegación inteligente con aprendizaje automático
- Incluye configuraciones, aliases y casos de uso avanzados

--- a/navegacion.qmd
+++ b/navegacion.qmd
@@ -1,6 +1,6 @@
 # Navegación y Exploración
 
-La navegación eficiente por el sistema de archivos es fundamental para cualquier usuario de terminal. Esta sección cubre las herramientas más poderosas para moverte, explorar y entender la estructura de tus directorios.
+La navegación eficiente por el sistema de archivos es fundamental para cualquier usuario de terminal. Esta sección cubre las herramientas más poderosas para moverte, explorar y entender la estructura de tus directorios de forma productiva.
 
 ## eza - Listado moderno de archivos {#sec-eza}
 
