📁 Gestión de Archivos: Herramientas avanzadas de manipulación
- rename/renameutils: Renombrado masivo con expresiones regulares
- rsync: Sincronización inteligente y copia incremental
- mmv: Movimiento múltiple de archivos con patrones
- Ejemplos prácticos de organización y mantenimiento de archivos

--- a/archivos.qmd
+++ b/archivos.qmd
@@ -1,6 +1,6 @@
 # Gestión de Archivos
 
-La gestión eficiente de archivos va más allá de simples operaciones de copia y movimiento. Esta sección cubre herramientas avanzadas para renombrado masivo, sincronización inteligente y manipulación sofisticada de archivos.
+La gestión eficiente de archivos va más allá de simples operaciones de copia y movimiento. Esta sección cubre herramientas avanzadas para renombrado masivo, sincronización inteligente y manipulación sofisticada de archivos y directorios.
 
 ## rename / renameutils - Renombrado masivo {#sec-rename}
 
