💻 Desarrollo y Git: Herramientas esenciales para programadores
- git: Control de versiones distribuido con workflows avanzados
- gh: CLI oficial de GitHub para gestión de repositorios
- node: Runtime de JavaScript para desarrollo moderno
- Flujos de trabajo completos desde código hasta deployment

--- a/desarrollo.qmd
+++ b/desarrollo.qmd
@@ -1,6 +1,6 @@
 # Desarrollo y Git
 
-El desarrollo moderno requiere herramientas potentes para control de versiones, gestión de repositorios y ejecución de código. Esta sección cubre las herramientas esenciales para cualquier desarrollador.
+El desarrollo moderno requiere herramientas potentes para control de versiones, gestión de repositorios y ejecución de código. Esta sección cubre las herramientas esenciales para cualquier desarrollador profesional.
 
 ## git - Control de versiones distribuido {#sec-git}
 
