🎬 Multimedia: Procesamiento profesional de video, audio e imágenes
- ffmpeg: Suite completa para conversión y edición multimedia
- yt-dlp: Descargador universal de videos con opciones avanzadas
- imagemagick: Manipulación poderosa de imágenes por lotes
- Workflows para automatización de tareas multimedia complejas

--- a/multimedia.qmd
+++ b/multimedia.qmd
@@ -1,6 +1,6 @@
 # Multimedia
 
-El procesamiento de archivos multimedia desde la línea de comandos es extremadamente potente. Esta sección cubre herramientas para manipular video, audio e imágenes con precisión profesional.
+El procesamiento de archivos multimedia desde la línea de comandos es extremadamente potente y versátil. Esta sección cubre herramientas para manipular video, audio e imágenes con precisión profesional.
 
 ## ffmpeg - Suite multimedia completa {#sec-ffmpeg}
 
