📊 Monitoreo del Sistema: Supervisión en tiempo real
- htop: Monitor interactivo de procesos con interfaz colorida
- neofetch: Información del sistema con estilo y personalización
- btop: Monitor moderno con gráficos y métricas avanzadas
- Análisis de rendimiento y troubleshooting del sistema

--- a/monitoreo.qmd
+++ b/monitoreo.qmd
@@ -1,6 +1,6 @@
 # Monitoreo del Sistema
 
-Las herramientas de monitoreo te permiten supervisar el rendimiento, recursos y estado general del sistema en tiempo real.
+Las herramientas de monitoreo te permiten supervisar el rendimiento, recursos y estado general del sistema en tiempo real con visualizaciones modernas.
 
 ## htop - Monitor interactivo de procesos {#sec-htop}
 
