📝 Texto y Documentos: Herramientas de procesamiento textual
- bat: Visualizador de código con syntax highlighting y paginación
- pandoc: Conversor universal entre formatos de documentos
- glow: Renderizador de Markdown con estilos elegantes
- vale: Linter de escritura para mejorar calidad textual
- Workflows para documentación y publicación automatizada

--- a/texto.qmd
+++ b/texto.qmd
@@ -1,6 +1,6 @@
 # Texto y Documentos
 
-Las herramientas de texto modernas mejoran significativamente la experiencia de lectura y edición de documentos desde la terminal.
+Las herramientas de texto modernas mejoran significativamente la experiencia de lectura, edición y conversión de documentos desde la terminal.
 
 ## bat - Visualizador con sintaxis {#sec-bat}
 
