🛠️ Utilidades Diversas: Herramientas para mejorar la productividad
- tldr: Páginas de manual simplificadas con ejemplos prácticos
- thefuck: Corrector automático de comandos con IA
- cowsay: Arte ASCII divertido para mensajes creativos
- direnv: Variables de entorno automáticas por directorio
- starship: Prompt personalizable multiplataforma

--- a/utilidades.qmd
+++ b/utilidades.qmd
@@ -1,6 +1,6 @@
 # Utilidades Diversas
 
-Esta sección cubre herramientas que mejoran la experiencia general en terminal, desde corrección automática hasta personalización del prompt.
+Esta sección cubre herramientas que mejoran significativamente la experiencia general en terminal, desde corrección automática hasta personalización avanzada del prompt.
 
 ## tldr - Ejemplos prácticos de comandos {#sec-tldr}
 
